--- a/legacy_html/index.html
+++ b/legacy_html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Naf Bird Farm - Peternakan Burung Berkualitas</title>
+    <title>Naf Aviary - Peternakan Burung Berkualitas</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -227,7 +227,7 @@
         <div class="container mx-auto px-4 md:px-6">
             <div class="text-center mb-12 md:mb-20">
                 <span class="text-emerald-600 font-bold tracking-widest text-xs md:text-sm uppercase mb-2 block">Kenapa Kami?</span>
-                <h2 class="text-3xl md:text-5xl font-serif font-bold text-emerald-900 mb-4 md:mb-6 leading-tight">Standar Kualitas <br class="md:hidden">Naf Bird Farm</h2>
+                <h2 class="text-3xl md:text-5xl font-serif font-bold text-emerald-900 mb-4 md:mb-6 leading-tight">Standar Kualitas <br class="md:hidden">Naf Aviary</h2>
                 <div class="w-16 md:w-24 h-1 md:h-1.5 bg-gold-500 mx-auto rounded-full"></div>
                 <p class="text-gray-600 mt-4 md:mt-6 max-w-2xl mx-auto text-base md:text-lg leading-relaxed px-2">Kami tidak sekadar menjual burung, tapi memberikan dedikasi pelestarian dengan kualitas suara dan postur terbaik untuk Anda.</p>
             </div>
@@ -257,7 +257,7 @@
                         <i data-lucide="file-check" class="w-8 h-8 md:w-10 md:h-10"></i>
                     </div>
                     <h3 class="text-xl md:text-2xl font-bold mb-3 md:mb-4 text-gray-800">Legalitas Resmi</h3>
-                    <p class="text-sm md:text-base text-gray-600 leading-relaxed">Naf Bird Farm adalah penangkaran resmi terdaftar BKSDA. Aman, legal, dan mendukung pelestarian alam.</p>
+                    <p class="text-sm md:text-base text-gray-600 leading-relaxed">Naf Aviary adalah penangkaran resmi terdaftar BKSDA. Aman, legal, dan mendukung pelestarian alam.</p>
                 </div>
             </div>
         </div>
@@ -507,7 +507,7 @@
             </div>
 
             <div class="border-t border-gray-800 pt-8 text-center text-gray-600 text-xs flex flex-col md:flex-row justify-between items-center gap-2">
-                <p>&copy; 2024 Naf Bird Farm. All rights reserved.</p>
+                <p>&copy; 2024 Naf Aviary. All rights reserved.</p>
                 <p>Dibuat dengan dedikasi untuk Kicau Mania.</p>
             </div>
         </div>
