--- a/legacy_html/detail.html
+++ b/legacy_html/detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detail Cucak Rowo Ring 105 - Naf Bird Farm</title>
+    <title>Detail Cucak Rowo Ring 105 - Naf Aviary</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -521,7 +521,7 @@
             </div>
 
             <div class="border-t border-gray-800 pt-8 text-center text-gray-600 text-xs flex flex-col md:flex-row justify-between items-center gap-2">
-                <p>&copy; 2024 Naf Bird Farm. All rights reserved.</p>
+                <p>&copy; 2024 Naf Aviary. All rights reserved.</p>
                 <p>Dibuat dengan dedikasi untuk Kicau Mania.</p>
             </div>
         </div>
